@startuml

interface Identifiable {
   +getId() : UUID
}

abstract Neo4jEntityBase

class AuthnIdentity {
    -foreignUserId: UUID
}

class Settings {
    +displayName?: String
}

Neo4jEntityBase -|> Identifiable
User -|> Neo4jEntityBase

User "1" *--> "1" AuthnIdentity
User "1" *--> "1" Settings
@enduml
